--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@ Released under the MIT license: http://jsbin.mit-license.org
 <meta name="robots" content="noindex">
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <script src="https://code.jquery.com/jquery-3.0.0.js"></script>
-  <script src="https://cdn.jsdelivr.net/howler.js/2.0.0/howler.js"></script>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width">
+ <script src="https://code.jquery.com/jquery-3.0.0.js"></script>
+ <script src="https://cdn.jsdelivr.net/howler.js/2.0.0/howler.js"></script>
+ <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 
@@ -24,11 +23,16 @@ Released under the MIT license: http://jsbin.mit-license.org
 </head>
 <body>
 <div id="container" class="container" align="center">
-  <div>
+  <div class="btn-group btn-group-lg">
        <button id = "play" class="btn btn-primary">PLAY</button>
       <button id = "pause" class="btn btn-primary">PAUSE</button>
       <button  id = "stop" class="btn btn-primary">STOP</button>
-      </div>
+   </div>
+     <div class="btn-group btn-group-lg">
+       <button id = "play1" class="btn btn-success">PLAY</button>
+      <button id = "pause1" class="btn btn-success">PAUSE</button>
+      <button  id = "stop1" class="btn btn-success">STOP</button>
+   </div>
 </div>
   <script src="https://code.jquery.com/jquery-3.0.0.js"></script>
   <script src="https://cdn.jsdelivr.net/howler.js/2.0.0/howler.js"></script>
@@ -55,7 +59,23 @@ $(document).ready(function(){
     sound.stop();
   });
   
+    var sound1 = new Howl({
+    
+    src: ['daris2.mp3'],
   
+  }); // end of sound declaration/assignment
+  
+  $('#play1').click(function(){
+    sound1.play();
+  });
+  
+  $('#pause1').click(function(){
+    sound1.pause();
+  });
+  
+  $('#stop1').click(function(){
+    sound1.stop();
+  });
   
   
   
