--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ Released under the MIT license: http://jsbin.mit-license.org
 <head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width">
+ <meta name="apple-mobile-web-app-capable" content="yes">
  <script src="https://code.jquery.com/jquery-3.0.0.js"></script>
  <script src="https://cdn.jsdelivr.net/howler.js/2.0.0/howler.js"></script>
  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
